# rag-eval

./: .env.example  .gitignore  IMPORTANT.md  README.md  ROADMAP.md  docker-compose.observability.yml  main.py  pyproject.toml
airflow/: setup_connections.sh
airflow/dags/: querybot_postgres_to_snowflake.py  s3_to_snowflake.py
classifiers/: run_consultation_classifier.py  run_sql_output_classifier.py  validate_consultation_outcomes.py
data/raw/: arxiv_20260408T205018.jsonl
grafana/: prometheus.yml
grafana/dashboards/: querybot_eval.json
grafana/provisioning/dashboards/: querybot.yml
infra/terraform/: main.tf  outputs.tf  variables.tf
ingestion/: arxiv_ingest.py
metrics/: instrumented.py  metrics.py  server.py
rag_eval/: dbt_project.yml  rag_eval_ddl.md
rag_eval/macros/: generate_schema_name.sql
rag_eval/models/marts/: dim_classifier_version.sql  fct_concept_drift.sql  fct_conversation_outcomes.sql  fct_conversation_outcomes_history.sql  fct_validation_runs.sql  schema.yml
rag_eval/models/staging/: _sources.yml  schema.yml  stg_arxiv_papers.sql  stg_conversation_messages.sql  stg_conversation_runs.sql  stg_conversations.sql
rag_eval/seeds/: schema.yml  validation_labels.csv
rag_eval/tests/: assert_no_significant_concept_drift.sql  assert_outcome_agreement_rate_valid.sql
research/: querybot_research.md  struggles.md
steamlit_app/: app.py  data_loader.py
